Fix sizing and alignment for billboard, focusing on moments

--- a/webpack/scss/misc.scss
+++ b/webpack/scss/misc.scss
@@ -1,3 +1,5 @@
+$mobile-width: 767px;
+
 body {
   width: 100%;
   height: 100%;
@@ -93,7 +95,7 @@ a:focus {
   margin-bottom: 50px;
 }
 
-@media (min-width: 767px) {
+@media (min-width: $mobile-width) {
   /*
   change min-width from 767px to 1px
   */
@@ -172,7 +174,6 @@ dd {
 /*  width: 100%;*/
   height: 300px;
   width: 100%;
-
 }
 
 .billboard-home {
@@ -185,17 +186,14 @@ dd {
   display: flex;
   justify-content: center; /* Centers content horizontally */
   align-items: center;     /* Centers content vertically */
+  background-origin: content-box;
   background-repeat: no-repeat;
   background-position: center center;
-  -webkit-background-size: 50%;
-  -moz-background-size: 50%;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
   background-size: contain;
-  -o-background-size: 50%;
+  -o-background-size: contain;
   position: relative;
-	margin: 0 1em;
-	width: auto;
-	height: auto;
-	min-height: 270px;
 }
 
 .billboard-others {
@@ -232,17 +230,17 @@ dd {
   font-size: 40px;
 }
 
-@media (min-width: 767px) {
+@media (min-width: $mobile-width) {
   /*
   change min-width from 767px to 1px
   */
   .billboard {
-    height: 700px;
+    height: 90vh;
   }
 
   .billboard-moments {
-    height: 700px;
-		background-size: 50%;
+    /*height: 90vh;*/
+    background-size: 50% contain;
   }
 
 
@@ -255,7 +253,7 @@ dd {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $mobile-width) {
   /*
     changed min-width from 992px to 1px
     Only allow background-attachment: fixed for desktop-ish sizes
@@ -269,7 +267,7 @@ dd {
   }
 }
 
-@media (min-width: 767px) {
+@media (min-width: $mobile-width) {
   /*
   change min-width from 767px to 1px
   */
